[package]
authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
categories = ["network-programming"]
description = "remotefs FTP client library"
documentation = "https://docs.rs/remotefs-ftp"
edition = "2021"
homepage = "https://veeso.github.io/remotefs-rs-ftp/"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["remotefs", "ftp-client"]
license = "MIT"
name = "remotefs-ftp"
readme = "README.md"
repository = "https://github.com/veeso/remotefs-rs-ftp"
version = "0.1.4"

[dependencies]
log = "^0.4"
remotefs = "^0.2.0"
suppaftp = "^6.0"
webpki-roots = { version = "^0.26", optional = true }

[dev-dependencies]
env_logger = "^0.11"
pretty_assertions = "^1.0.0"
rand = "^0.8.4"
serial_test = "^3"
tempfile = "^3.2.0"

[features]
default = ["find"]
# TLS
native-tls = ["suppaftp/native-tls"]
rustls = ["suppaftp/rustls", "webpki-roots"]
secure = ["native-tls"]
vendored = ["suppaftp/native-tls-vendored"]
# misc
find = ["remotefs/find"]
no-log = ["log/max_level_off"]
# tests
github-actions = []
with-containers = ["native-tls"]

[target."cfg(target_os = \"windows\")"]
[target."cfg(target_os = \"windows\")".dependencies]
path-slash = "^0.1.4"

[target."cfg(target_family = \"unix\")"]
[target."cfg(target_family = \"unix\")".dependencies]
users = "^0.11.0"
