[package]
authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
categories = ["network-programming"]
description = "remotefs FTP client library"
documentation = "https://docs.rs/remotefs-ftp"
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["remotefs", "ftp-client"]
license = "MIT"
name = "remotefs-ftp"
readme = "README.md"
repository = "https://github.com/remotefs-rs/remotefs-rs-ftp"
version = "0.2.2"

[dependencies]
log = "^0.4"
remotefs = "^0.3"
suppaftp = "^6"
rustls-pki-types = { version = "1", optional = true }
webpki-roots = { version = "0.26", optional = true }

[dev-dependencies]
env_logger = "^0.11"
pretty_assertions = "^1.0.0"
rand = "^0.8.4"
serial_test = "^3"
tempfile = "^3"

[features]
default = ["find"]
# TLS
native-tls = ["suppaftp/native-tls"]
rustls = ["suppaftp/rustls", "dep:rustls-pki-types", "dep:webpki-roots"]
secure = ["native-tls"]
vendored = ["suppaftp/native-tls-vendored"]
# misc
find = ["remotefs/find"]
no-log = ["log/max_level_off"]
# tests
github-actions = []
with-containers = ["native-tls"]

[target."cfg(target_os = \"windows\")"]
[target."cfg(target_os = \"windows\")".dependencies]
path-slash = "^0.1.4"
