[package]
authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
categories = ["network-programming"]
description = "remotefs FTP client library"
documentation = "https://docs.rs/remotefs-ftp"
edition = "2024"
rust-version = "1.85.1"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["remotefs", "ftp-client"]
license = "MIT"
name = "remotefs-ftp"
readme = "README.md"
repository = "https://github.com/remotefs-rs/remotefs-rs-ftp"
version = "0.3.0"

[dependencies]
log = "^0.4"
remotefs = "^0.3"
suppaftp = "^7"
rustls-pki-types = { version = "1", optional = true }
webpki-roots = { version = "1", optional = true }

[dev-dependencies]
env_logger = "^0.11"
pretty_assertions = "1"
rand = "^0.9"
tempfile = "^3"
testcontainers = { version = "0.25", features = ["blocking"] }

[features]
default = ["find"]
# TLS
native-tls = ["suppaftp/native-tls"]
native-tls-vendored = ["native-tls", "suppaftp/native-tls-vendored"]
rustls = ["suppaftp/rustls", "dep:rustls-pki-types", "dep:webpki-roots"]
# misc
find = ["remotefs/find"]
no-log = ["log/max_level_off"]

[target."cfg(target_os = \"windows\")"]
[target."cfg(target_os = \"windows\")".dependencies]
path-slash = "^0.2"
